kfileitems: Use internal name again for sorting Previously, KDesktopFileAction::name() was wrongly used to sort instead of KDesktopFileAction::actionsKey(). That meant service menus could not be ordered by their developers manually and weird situations like sorting actions named "Resize 300" after "Resize 2000".

This regression was introduced when porting from KFileItemActinos to
KDesktopFileAction in 0eb24754b5e3fb0025889bca1fca826f45961254

BUG: 510470
FIXED-IN: 6.20.0